--- a/netlify-plugin-corgis-not-plugin/package.json
+++ b/netlify-plugin-corgis-not-plugin/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "netlify-plugin-playtime",
+  "name": "netlify-plugin-corgis-not-plugins",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "netlify",
+    "netlify-plugin"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
